--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "post-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://Islomzoda.github.io/post-vk",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
